Bug 137703 - Crash when setting cell background color
Summary: Crash when setting cell background color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-23 11:11 UTC by Kevin Suo
Modified: 2020-10-26 13:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdbtrace.log (19.57 KB, text/x-log)
2020-10-23 11:16 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-10-23 11:11:20 UTC
Steps to Reproduce:
1. Click twice dropdown of any toolbar icon which has a dropdown box (e.g., the Background Color toolbar icon).

--> Crash.
Comment 1 Kevin Suo 2020-10-23 11:14:43 UTC
Bibisected to the following range: 091ae73930f61f1438ac9eb1a6e2e5fda52d578b..606c65c90cb3e8abdd74540195b7cb01ba88adc8

606c65c90 (for DisallowCycleFocusOut forward unused keyevents to InterimItemWindow, 2020-10-21)
a87af93ff (tdf#103987 Avoid duplication of the Custom Properties during OOXML export, 2020-10-15)
cb310560a (Guard against bad stream in TypeSerializer::readGradient, 2020-10-22)


Adding 	Caolán McNamara to cc. Would you please take a look?
Comment 2 Kevin Suo 2020-10-23 11:16:06 UTC
Created attachment 166660 [details]
gdbtrace.log
Comment 3 m_a_riosv 2020-10-23 11:16:51 UTC
No issue for me with:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 9c7b02852fce033b008f2ccd1703fc10276cfb4e
CPU threads: 4; OS: Windows 10.0 Build 20180; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 4 m_a_riosv 2020-10-23 11:17:52 UTC
Have you tested with a clean profile. Menu/Help/Restart in Safe Mode
Comment 5 Commit Notification 2020-10-24 18:08:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ccb90bcef40795ab7f6366e8a20efad489eaec1

Resolves: tdf#137703 crash on 2nd launch of cell bg color dropdown

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-10-26 10:39:32 UTC
Hello Kevin Suo,
Could you please verify the issue is fixed for you? I can't reproduce the original problem myself
Comment 7 Kevin Suo 2020-10-26 13:31:39 UTC
I verify that this is fixed on master.
Thank you Caolán for the quick fix!