Resolves: tdf#137703 crash on 2nd launch of cell bg color dropdown

Change-Id: I263edf36d70b3b81051c7aa5ca44523d0193975f